--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -24,6 +24,7 @@ security:
         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/admin/, role: ROLE_ADMIN }
         - { path: ^/crossword/, role: ROLE_USER }
+        - { path: ^/constructor/, role: ROLE_USER }
         - { path: ^/profile/, role: ROLE_USER }
         
     role_hierarchy:
