--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -54,6 +54,8 @@ assetic:
     # java: /usr/bin/java
     filters:
         cssrewrite: ~
+        yui_js:
+            jar: "%kernel.root_dir%/Resources/java/yuicompressor.jar"
         # closure:
         #     jar: %kernel.root_dir%/java/compiler.jar
         # yui_css:
@@ -221,8 +223,12 @@ services:
       class: Anyx\CrosswordBundle\Listener\SolutionListener
       tags:
         - { name: doctrine_mongodb.odm.event_listener, event: postPersist, method: postPersist}
-    tags.listener:
+    tags.subscriber:
       class: Anyx\CrosswordBundle\Listener\TagsSubscriber
+      tags:
+        - { name: doctrine_mongodb.odm.event_subscriber}
+    estimates.subscriber:
+      class: Anyx\CrosswordBundle\Listener\CrosswordEstimateSubscriber
       tags:
         - { name: doctrine_mongodb.odm.event_subscriber}
         
